--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <main class="main">
-
+  <div class="currency" title="Изменить валюту" id="change-currency">$</div>
   <header class="header">
     <div class="container">
       <div class="logo">
@@ -18,13 +18,13 @@
       <nav class="menu">
         <ul class="menu-list">
           <li class="menu-item">
-            <a href="#">Каталог</a>
+            <a data-link="products">Каталог</a>
           </li>
           <li class="menu-item">
-            <a href="#">О нас</a>
+            <a data-link="love">О нас</a>
           </li>
           <li class="menu-item">
-            <a href="#">Оформление заказа</a>
+            <a data-link="order">Оформление заказа</a>
           </li>
         </ul>
       </div>
@@ -40,18 +40,19 @@
           Наши рецепты вдыхают жизнь в изысканность ингредиентов: ароматное натуральное масло, свежие сливки, чистый мёд и отборная мука. Мы тщательно отбираем каждый компонент премиального печенья, стремясь подарить вам истинное кулинарное наслаждение.
         </p>
         <div class="main-action">
-          <button class="button">Заказать</button>
+          <button class="button" id="main-action-button">Заказать</button>
         </div>
       </div>
       <img src="images/cookie.png" alt="cookie" class="main-image">
     </div>
   </section>
 
-  <section class="products">
+  <section class="products" id="products">
     <div class="container">
       <img src="images/line2.png" alt="line 2" class="line2">
       <div class="common-title">Выберите печенье</div>
       <div class="products-items">
+
         <div class="products-item">
           <div class="product-item-image">
             <img src="images/1.png" alt="product 1">
@@ -63,7 +64,7 @@
             </div>
             <div class="products-item-extra">
               <div class="products-item-info">
-                <div class="products-item-price">20 $</div>
+                <div class="products-item-price" data-base-price="20">20 $</div>
                 <div class="products-item-weight">2 шт./ 200 гр.</div>
               </div>
               <button class="button violet-button">Заказать</button>
@@ -82,7 +83,7 @@
             </div>
             <div class="products-item-extra">
               <div class="products-item-info">
-                <div class="products-item-price">24 $</div>
+                <div class="products-item-price" data-base-price="24">24 $</div>
                 <div class="products-item-weight">2 шт./ 200 гр.</div>
               </div>
               <button class="button violet-button">Заказать</button>
@@ -101,7 +102,7 @@
             </div>
             <div class="products-item-extra">
               <div class="products-item-info">
-                <div class="products-item-price">18 $</div>
+                <div class="products-item-price" data-base-price="18">18 $</div>
                 <div class="products-item-weight">2 шт./ 200 гр.</div>
               </div>
               <button class="button violet-button">Заказать</button>
@@ -120,7 +121,7 @@
             </div>
             <div class="products-item-extra">
               <div class="products-item-info">
-                <div class="products-item-price">24 $</div>
+                <div class="products-item-price" data-base-price="24">24 $</div>
                 <div class="products-item-weight">2 шт./ 200 гр.</div>
               </div>
               <button class="button violet-button">Заказать</button>
@@ -139,7 +140,7 @@
             </div>
             <div class="products-item-extra">
               <div class="products-item-info">
-                <div class="products-item-price">20 $</div>
+                <div class="products-item-price" data-base-price="20">20 $</div>
                 <div class="products-item-weight">2 шт./ 200 гр.</div>
               </div>
               <button class="button violet-button">Заказать</button>
@@ -158,7 +159,7 @@
             </div>
             <div class="products-item-extra">
               <div class="products-item-info">
-                <div class="products-item-price">18 $</div>
+                <div class="products-item-price" data-base-price="18">18 $</div>
                 <div class="products-item-weight">2 шт./ 200 гр.</div>
               </div>
               <button class="button violet-button">Заказать</button>
@@ -178,7 +179,7 @@
             </div>
             <div class="products-item-extra">
               <div class="products-item-info">
-                <div class="products-item-price">36 $</div>
+                <div class="products-item-price" data-base-price="36">36 $</div>
                 <div class="products-item-weight">4 шт./ 400 гр.</div>
               </div>
               <button class="button violet-button">Заказать</button>
@@ -197,7 +198,7 @@
             </div>
             <div class="products-item-extra">
               <div class="products-item-info">
-                <div class="products-item-price">33 $</div>
+                <div class="products-item-price" data-base-price="33">33 $</div>
                 <div class="products-item-weight">4 шт./ 400 гр.</div>
               </div>
               <button class="button violet-button">Заказать</button>
@@ -216,7 +217,7 @@
             </div>
             <div class="products-item-extra">
               <div class="products-item-info">
-                <div class="products-item-price">38 $</div>
+                <div class="products-item-price" data-base-price="38">38 $</div>
                 <div class="products-item-weight">4 шт./ 400 гр.</div>
               </div>
               <button class="button violet-button">Заказать</button>
@@ -235,7 +236,7 @@
             </div>
             <div class="products-item-extra">
               <div class="products-item-info">
-                <div class="products-item-price">33 $</div>
+                <div class="products-item-price" data-base-price="33">33 $</div>
                 <div class="products-item-weight">4 шт./ 400 гр.</div>
               </div>
               <button class="button violet-button">Заказать</button>
@@ -254,7 +255,7 @@
             </div>
             <div class="products-item-extra">
               <div class="products-item-info">
-                <div class="products-item-price">39 $</div>
+                <div class="products-item-price" data-base-price="39">39 $</div>
                 <div class="products-item-weight">4 шт./ 400 гр.</div>
               </div>
               <button class="button violet-button">Заказать</button>
@@ -273,7 +274,7 @@
             </div>
             <div class="products-item-extra">
               <div class="products-item-info">
-                <div class="products-item-price">35 $</div>
+                <div class="products-item-price" data-base-price="35">35 $</div>
                 <div class="products-item-weight">4 шт./ 400 гр.</div>
               </div>
               <button class="button violet-button">Заказать</button>
@@ -284,7 +285,7 @@
     </div>
   </section>
 
-  <section class="love">
+  <section class="love" id="love">
     <div class="container">
       <div class="common-title">Пекарня с любовью</div>
       <div class="love-items">
@@ -301,7 +302,7 @@
     </div>
   </section>
 
-  <section class="order">
+  <section class="order" id="order">
     <img src="images/line3.png" alt="line 3" class="line3">
     <div class="container">
       <div class="common-title">Закажите печенье</div>
@@ -312,10 +313,10 @@
             Откройте для себя волшебство вкуса с нашим премиальным печеньем! Закажите прямо сейчас и окунитесь в мир сладких наслаждений. 
           </div>
           <div class="order-form-inputs">
-            <input type="text" placeholder="Выберите печенье">
-            <input type="text" placeholder="Ваше имя">
-            <input type="text" placeholder="Ваш телефон">
-            <button class="button violet-button ">Оформить заказ</button>
+            <input type="text" placeholder="Выберите печенье" id="product">
+            <input type="text" placeholder="Ваше имя" id="name">
+            <input type="text" placeholder="Ваш телефон" id="phone">
+            <button class="button violet-button" id="order-action">Оформить заказ</button>
           </div>
         </div>
         <div class="order-block-image">
@@ -334,5 +335,7 @@
 
 </main>
 
+
+<script src="scripts/script.js"></script>
 </body>
 </html>
